<resources>
    <string name="app_name">MyRuns</string>

    <string name="profile_picture">User profile picture</string>
    <string name="change">Change</string>

    <string name="name">Name</string>
    <string name="your_name">Your Name</string>

    <string name="email">Email</string>
    <string name="your_email">Your Email</string>

    <string name="phone">Phone</string>
    <string name="your_phone_number">Your Phone Number</string>

    <string name="gender">Gender</string>
    <string name="female">Female</string>
    <string name="male">Male</string>

    <string name="class_label">Class</string>
    <string name="eg_2012">eg. 2012</string>

    <string name="major">Major</string>
    <string name="your_major">Your Major</string>

    <string name="save">Save</string>
    <string name="cancel">Cancel</string>

    <string-array name="input_type_array">
        <item>Manual Entry</item>
        <item>GPS</item>
        <item>Automatic</item>
    </string-array>

    <string-array name="activity_type_array">
        <item>Running</item>
        <item>Walking</item>
        <item>Standing</item>
        <item>Cycling</item>
        <item>Hiking</item>
        <item>Downhill Skiing</item>
        <item>Cross-Country Skiing</item>
        <item>Snowboarding</item>
        <item>Skating</item>
        <item>Swimming</item>
        <item>Mountain Biking</item>
        <item>Wheelchair</item>
        <item>Elliptical</item>
        <item>Other</item>
    </string-array>

    <string-array name="unit_preference_items">
        <item>Metric (Kilometres)</item>
        <item>Imperial (Miles)</item>
    </string-array>
</resources>